Bug #61, Fix SVG sankey diagram colour contrast [accessibility][LACE]+
* [iet:3981687]
* https://github.com/IET-OU/oer-evidence-hub-org/issues/54

--- a/css/style.css
+++ b/css/style.css
@@ -298,14 +298,14 @@ vertical-align: initial!important;
   display:none;
 }
 
-.link {
+/* Fix colour contrast [a11y][Bug: 61] */
+svg .link {
   fill: none;
-  stroke: #000;
+  stroke: #777;
   stroke-opacity: .2;
 }
-
-.link:hover {
-  stroke-opacity: .5;
+svg .link:hover {
+  stroke-opacity: .4;
 }
 
 
